<resources>
    <string name="app_name">My Favourite Movies</string>
    <string name="title"></string>
    <string name="date"></string>
    <string name="popularity"></string>
    <string name="average"></string>
    <string name="titlemdblb">Título:</string>
    <string name="datelb">Salida:</string>
    <string name="popularitylb">Popularidad:</string>
    <string name="introfilm">Introduce una palabra clave para encontrar peliculas:</string>
    <string name="askquest">Quieres esta película como favorita?</string>
    <string name="intropoints">Puntuacion de la pelicula sobre 10</string>
    <string name="error_points">No has introducido una puntuación sobre 10!</string>
    <string name="titleselector">Find your film</string>
    <string name="actualtimelb">Actual time</string>
    <string name="country"></string>
    <string name="name"></string>
    <string name="region"></string>
    <string name="regionlb">Region:</string>
    <string name="latitlb">Latitud:</string>
    <string name="longitudlb">Longitud:</string>
    <string name="namelb">Name:</string>
    <string name="tzid">Tz Id:</string>
    <string name="currentlb">Current</string>
    <string name="lclepochlb">Local time epoch:</string>
    <string name="lastupdatedepochlb">Last updated epoch:</string>
    <string name="time"></string>
    <string name="last_updated">Last updated:</string>
    <string name="temp_c">Temp in C:</string>
    <string name="temp_f">Temp in F:</string>
    <string name="is_day">Is day?</string>
    <string name="wind_mph">Wind MPH:</string>
    <string name="wind_kph">Wind KPH:</string>
    <string name="wind_degree">Wind degree:</string>
    <string name="wind_dir">Wind direction:</string>
    <string name="location">null</string>
    <string name="points"></string>
    <string name="overview">Overview:</string>
    <string name="upd">Update</string>
    <string name="voteslb">Votos:</string>
    <string name="ch_location">Change Location</string>
    <string name="overviewtxt"></string>
    <string name="titlemain">Favourite Movies</string>
    <string name="titleselectoract">Select a Movie</string>
    <string name="titledetails">Details</string>
    <string name="titleweatheract">Weather</string>
</resources>